# ghbox

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/ghbox/: Cargo.toml
crates/ghbox-core/: Cargo.toml
crates/ghbox-core/src/: config.rs  error.rs  filter.rs  github.rs  inbox.rs  item.rs  lib.rs  store.rs  types.rs
crates/ghbox/src/: app.rs  main.rs  ui.rs
docs/superpowers/plans/: 2026-07-11-ghbox-mvp.md  2026-07-12-config-driven-sections.md  2026-07-12-gh-dash-keybindings.md  2026-07-13-gh-dash-ui.md  2026-07-15-spinner-ui-polish.md
docs/superpowers/specs/: 2026-07-12-config-driven-sections-design.md  2026-07-12-gh-dash-keybindings-design.md  2026-07-13-gh-dash-ui-design.md  2026-07-15-spinner-ui-polish-design.md
