[package]
name = "ghbox-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde_json = "1.0.150"
thiserror = "2.0.18"

[dev-dependencies]
