[package]
name = "ghbox-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dirs = "6.0.0"
regex = "1.13.0"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
toml = "1.1.2"

[dev-dependencies]
tempfile = "3.27.0"
