[package]
name = "ghbox-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for ghbox: GitHub GraphQL fetch, same-comment mention+merge filtering, SQLite done-state tracking"

[dependencies]
dirs = "6.0.0"
regex = "1.13.0"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", default-features = false, features = ["macros", "process", "time", "io-util"] }
toml = "1.1.2"

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
