[package]
name = "ghbox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TUI for PRs waiting on you: merge requests detected from same-comment @mention + merge keyword, plus review requests"

[dependencies]
anyhow = "1.0.103"
crossterm = "0.29.0"
ghbox-core = { path = "../ghbox-core" }
open = "5.3.6"
ratatui = "0.30.2"
time = { version = "0.3", features = ["parsing", "local-offset"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time"] }
unicode-width = "0.2"
